# ghci-websockets

./: .gitignore  2019-04-24-nixpkgs.json  CHANGELOG.md  LICENSE  README.md  default.nix  ghci-websockets.cabal  ghci-websockets.nix  nixpkgs-from-json.nix
html/: index.html
src/Ghci/: Server.hs  Websockets.hs
src/Ghci/Server/: Config.hs
src/Ghci/Server/Http/: Internal.hs  Stage0.hs
src/Ghci/Server/Websockets/: Internal.hs  Message.hs
src/Ghci/Websockets/: Simple.hs
