cabal-version: 2.2
name: ghci-websockets
version: 0.0.1
license: BSD-3-Clause
copyright: Copyright (C) 2019 Jann Mueller
maintainer: Jann Müller (j.mueller.11@alumni.ucl.ac.uk)
author: Jann Müller
stability: experimental
homepage: https://github.com/j-mueller/ghci-websockets
bug-reports: https://github.com/j-mueller/ghci-websockets/issues
synopsis: Run a websocket server in GHCi
description: Run a websocket server in GHCi.
category: Language
build-type: Simple

source-repository head
    type: git
    location: https://github.com/j-mueller/ghci-websockets

library
    exposed-modules:
        Ghci.Websockets
    hs-source-dirs: lib
    default-language: Haskell2010
    ghc-options: -Wall -Werror
    build-depends:
        base -any,
        aeson -any,
        foreign-store -any,
        websockets -any


